crates/huak_cli/tests/snapshots/test_insta_example__tests__publish_help.snap
---
source: crates/huak_cli/tests/test_insta_example.rs
info:
  program: huak
  args:
    - publish
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Builds and uploads current project to a registry

Usage: huak publish [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

