crates/huak_cli/tests/snapshots/test_insta_example__tests__python_help.snap
---
source: crates/huak_cli/tests/test_insta_example.rs
info:
  program: huak
  args:
    - python
    - help
---
success: true
exit_code: 0
----- stdout -----
Manage Python installations

Usage: huak python [OPTIONS] <COMMAND>

Commands:
  list  List the installed Python interpreters
  use   Use a specific Python interpreter
  help  Print this message or the help of the given subcommand(s)

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

