crates/huak_cli/tests/snapshots/test_insta_example__tests__test_help.snap
---
source: crates/huak_cli/tests/test_insta_example.rs
info:
  program: huak
  args:
    - test
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Test the project's Python code

Usage: huak test [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

